[gd_scene load_steps=10 format=3 uid="uid://ken6of6mjj0f"]

[ext_resource type="Script" uid="uid://w46r1xqlomv8" path="res://UI/race_panel_radio.gd" id="1_20d1c"]
[ext_resource type="Script" uid="uid://cyexhi5ykcw3s" path="res://UI/UI_Scripts_gd/Button_Manager.gd" id="1_ds00d"]
[ext_resource type="Script" uid="uid://b4oauovrwykbe" path="res://UI/instantiate_class.gd" id="2_qfwp6"]
[ext_resource type="Script" uid="uid://b7qp0qv1qwtyh" path="res://UI/class_radio.gd" id="2_wy7x5"]
[ext_resource type="Script" uid="uid://vip7t21m7o7a" path="res://UI/ClassJsonInfo.cs" id="4_mdfeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ds00d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjwba"]
bg_color = Color(0.310153, 0.698549, 0.329954, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20d1c"]
bg_color = Color(0.826609, 0.521583, 0.128485, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfwp6"]
bg_color = Color(0.976675, 0.321446, 0.566361, 1)

[node name="CenterContainer" type="CenterContainer" groups=["panels"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 4.0
offset_right = 2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Race" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Race"

[node name="Class" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sub-Race"

[node name="Sub-Class" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Class"

[node name="Button4" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Spells"

[node name="Button5" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Cantrips"

[node name="Button6" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Background"

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 157.47)
layout_mode = 2

[node name="Main" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ds00d")

[node name="Race_Panel" type="Panel" parent="PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kjwba")
script = ExtResource("1_20d1c")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/Race_Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/Race_Panel/HBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/HBoxContainer/Race_Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Tiefling"

[node name="CheckBox2" type="CheckBox" parent="PanelContainer/HBoxContainer/Race_Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Orc
"

[node name="CheckBox3" type="CheckBox" parent="PanelContainer/HBoxContainer/Race_Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Human"

[node name="Class_Panel" type="Panel" parent="PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_20d1c")
script = ExtResource("2_wy7x5")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/Class_Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/Class_Panel/HBoxContainer"]
layout_mode = 2
script = ExtResource("2_qfwp6")

[node name="Sub-Class_Panel" type="Panel" parent="PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qfwp6")

[node name="PanelManager" type="Node" parent="."]
script = ExtResource("1_ds00d")

[node name="Node" type="Node" parent="."]
script = ExtResource("4_mdfeu")

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Class" to="PanelManager" method="_on_button_2_pressed"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/Race_Panel/HBoxContainer/VBoxContainer/CheckBox" to="PanelContainer/HBoxContainer/Race_Panel" method="_on_radio_toggled" binds= ["CheckBox", "option 1"]]
[connection signal="toggled" from="PanelContainer/HBoxContainer/Race_Panel/HBoxContainer/VBoxContainer/CheckBox2" to="PanelContainer/HBoxContainer/Race_Panel" method="_on_radio_toggled" binds= ["CheckBox2", "option 2"]]
[connection signal="toggled" from="PanelContainer/HBoxContainer/Race_Panel/HBoxContainer/VBoxContainer/CheckBox3" to="PanelContainer/HBoxContainer/Race_Panel" method="_on_radio_toggled" binds= ["CheckBox3", "option 3"]]
